kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: futr-za-jutr
spec:
  selector:
    app: futr-za-jutr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
